--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "storybook": "start-storybook"
   },
   "eslintConfig": {
@@ -39,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@storybook/addon-info": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "babel-loader": "^8.0.6"
   }
