--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nuworks-ui-library",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "NUWORKS product team UI Library.",
-  "main": "index.js",
+  "main": "./src/@components/index.js",
   "keywords": [
 	"ui-library",
 	"react"
