--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "NUWORKS product team UI Library.",
   "main": "./src/@components/index.js",
   "keywords": [
-	"ui-library",
-	"react"
+    "ui-library",
+    "react"
   ],
   "author": "Nuworks Product Team <productdev@nuworks.ph>",
   "contributors": [
-    {"name": "Domz Garcia", "email": "domgarcia.fp@gmail.com"},
-    {"name": "Ervinne Sodusta", "email": "ervinne.sodusta@nuworks.ph"}
+    {
+      "name": "Domz Garcia",
+      "email": "domgarcia.fp@gmail.com"
+    },
+    {
+      "name": "Ervinne Sodusta",
+      "email": "ervinne.sodusta@nuworks.ph"
+    }
   ],
   "license": "MIT",
   "repository": {
-    "type": "git", 
+    "type": "git",
     "url": "https://github.com/domzgarcia/storybook-react"
   },
-
   "dependencies": {
     "connected-react-router": "^6.5.2",
     "history": "^4.9.0",
