--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuworks-ui-library",
   "version": "1.0.4",
   "description": "NUWORKS product team UI Library.",
-  "main": "./src/@components/index.js",
+  "main": "index.js",
   "keywords": [
     "ui-library",
     "react"
